--- a/.gitignore
+++ b/.gitignore
@@ -145,5 +145,6 @@ dmypy.json
 
 # pytype static type analyzer
 .pytype/
-
+/static
+/media
 # End of https://www.toptal.com/developers/gitignore/api/django
