--- a/.gitignore
+++ b/.gitignore
@@ -147,5 +147,6 @@ dmypy.json
 .pytype/
 /static
 /media
-settings.py
+/udemyDjango/settings.py
+
 # End of https://www.toptal.com/developers/gitignore/api/django
